--- a/frontend.html
+++ b/frontend.html
@@ -1,6 +1,7 @@
-<html>
+<html lang = "en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>QR SCAN CODE</title>
         <style>
             body 
             {
