--- a/frontend.html
+++ b/frontend.html
@@ -59,7 +59,7 @@
     </head>
     <body>
        <div class = "rectangle"></div>
-       <img src="image-qr-code.png" class="center">
+       <img src="image-qr-code.png" alt = "qr-image" class="center">
        <div class = "cent">
              <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Improve your front-end<br>&nbsp;&nbsp;&nbsp;skills by building projects</p>
        </div>
