--- a/frontend.html
+++ b/frontend.html
@@ -61,10 +61,10 @@
        <div class = "rectangle"></div>
        <img src="image-qr-code.png" alt = "qr-image" class="center">
        <div class = "cent">
-             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Improve your front-end<br>&nbsp;&nbsp;&nbsp;skills by building projects</p>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Improve your front-end<br>&nbsp;&nbsp;&nbsp;skills by building projects
        </div>
        <div class = 'lite'>
-             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scan&nbsp;&nbsp;the&nbsp;&nbsp;QR&nbsp;&nbsp;Code&nbsp;&nbsp;to&nbsp;&nbsp;visit&nbsp;&nbsp;Frontend<br>&nbsp;&nbsp;&nbsp;Mentor&nbsp;and &nbsp;taking your coding skills to <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the next level</p>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scan&nbsp;&nbsp;the&nbsp;&nbsp;QR&nbsp;&nbsp;Code&nbsp;&nbsp;to&nbsp;&nbsp;visit&nbsp;&nbsp;Frontend<br>&nbsp;&nbsp;&nbsp;Mentor&nbsp;and &nbsp;taking your coding skills to <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the next level
        </div>
     </body>
 </html>
