--- a/frontend.html
+++ b/frontend.html
@@ -1,7 +1,6 @@
-<html lang = "en">
+<html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>QR SCAN CODE</title>
         <style>
             body 
             {
@@ -11,7 +10,7 @@
             {
                 position: absolute;
                 height: 550px;
-                width: 400px;
+                width: 320px;
                 background-color: white;
                 left: 35%;
                 right: 45%;
@@ -22,8 +21,8 @@
             .center
             {
                 position: absolute;
-                height: 380px;
-                width: 420px;
+                height: 330px;
+                width: 340px;
                 left: 35%;
                 right:45%;
                 top: 10.9%;
@@ -38,10 +37,11 @@
                 width: 400px;
                 left: 38%;
                 right:79%;
-                top: 65%;
-                font-weight: bolder;
+                top: 61%;
+                font-family: serif;
+                font-weight: bold;
                 font-size: x-large;
-                font-family: Arial;
+                word-spacing: 0.05cm;
             }
             .lite
             {
@@ -50,17 +50,18 @@
                 width: 400px;
                 left: 38%;
                 right:85%;
-                top: 75%;
+                top: 68%;
                 font-size: medium;
                 font-weight: lighter;
-                font-family: Times;
+                font-family: 'Segoe UI';
             }
         </style>
+        <title>QR Scan Code</title>
     </head>
     <body>
        <div class = "rectangle"></div>
-        <div class = "image"> <img src="image-qr-code.png" alt = "qr-image" class="center"> </div>
-       <div class = "cent"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Improve your front-end<br>&nbsp;&nbsp;&nbsp;skills by building projects</div><br><br>
-       <div class = 'lite'><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scan&nbsp;&nbsp;the&nbsp;&nbsp;QR&nbsp;&nbsp;Code&nbsp;&nbsp;to&nbsp;&nbsp;visit&nbsp;&nbsp;Frontend<br>&nbsp;&nbsp;&nbsp;Mentor&nbsp;and &nbsp;taking your coding skills to <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the next level <br></div>
+       <img src="image-qr-code.png" alt = "qr-image" class="center">
+       <div class = "cent">&nbsp;Improve your front-end <br> skills by building projects</div>
+       <div class = 'lite'><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scan&nbsp;the&nbsp;QR&nbsp;Code&nbsp;to&nbsp;visit&nbsp;Frontend<br>&nbsp;&nbsp;Mentor&nbsp;and &nbsp;take your coding skills to <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the next level</div>
     </body>
 </html>
